--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -12,11 +12,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/toolbar"
+        android:gravity="center"
         android:orientation="vertical">
 
-        <ImageView
+        <com.palmithor.materialdemo.TranslateDraweeView
             android:id="@+id/image"
-            android:layout_width="match_parent"
+            android:layout_width="350dp"
             android:layout_height="350dp"/>
     </LinearLayout>
 </RelativeLayout>
