--- a/app/src/main/res/layout/item_card.xml
+++ b/app/src/main/res/layout/item_card.xml
@@ -13,7 +13,7 @@
         app:cardElevation="6dp"
         app:cardUseCompatPadding="true">
 
-        <ImageView
+        <com.palmithor.materialdemo.TranslateDraweeView
             android:id="@+id/image"
             android:layout_width="150dp"
             android:layout_height="150dp"
